--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
@@ -1,60 +1,31 @@
-title: "Guest Bathroom"
-path: "guest-bath"
+title: Guest Bathroom
+path: guest-bath
 subview: true
 type: custom:grid-layout
 layout:
   grid-template-areas: |
-    "header status"
+    "header header"
     "sensors health"
   mediaquery:
     # portrait monitor
     "only screen and (min-width: 769px) and (max-width: 1400px)":
       grid-template-areas: |
-        "header status"
+        "header header"
         "sensors health"
     # Smartphones
     "only screen and (max-width: 768px)":
       grid-template-areas: |
         "header"
-        "status"
         "sensors"
         "health"
 cards:
-  - type: custom:decluttering-card
+  #################
+  # HEADER
+  #################
+  - type: custom:button-card
     template: room_header
     view_layout:
       grid-area: header
-    variables:
-      - sensor_prefix: guest_bath
-      - room_name: Guest Bathroom
-
-  #################
-  # STATUS CHIPS
-  #################
-  - type: custom:mod-card
-    view_layout:
-      grid-area: status
-    style:
-      hui-horizontal-stack-card$: |
-        #root { 
-          justify-content: center;
-        }
-    card:
-      type: horizontal-stack
-      cards:
-        - type: "custom:button-card"
-          template: chip_mdi_icon_state
-          entity: binary_sensor.cat_food_status
-          icon: mdi:cat
-          label: ""
-          styles:
-            icon:
-              - color: >
-                  [[[ if (entity.state == 'on') 
-                        return "var(--red-color)" ;
-                      else return "var(--green-color)"; ]]]
-          variables:
-            ulm_chip_mdi_icon_state_entity: binary_sensor.cat_food_status
 
   #################
   # SENSORS
