--- a/ui_lovelace_minimalist/dashboard/views/rooms/shed.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/shed.yaml
@@ -19,6 +19,9 @@ layout:
         "sensors"
         "health"
 cards:
+  #################
+  # HEADER
+  #################
   - type: custom:decluttering-card
     template: room_header
     view_layout:
