--- a/ui_lovelace_minimalist/dashboard/views/rooms/master-bathroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/master-bathroom.yaml
@@ -21,6 +21,9 @@ layout:
         "sensors"
         "health"
 cards:
+  #################
+  # HEADER
+  #################
   - type: custom:decluttering-card
     template: room_header
     view_layout:
