smaller style templates

--- a/ui_lovelace_minimalist/custom_cards/cards/status_chips.yaml
+++ b/ui_lovelace_minimalist/custom_cards/cards/status_chips.yaml
@@ -1,5 +1,5 @@
 status_chips:
-  template: ulm_language_variables
+  template: no_click
 
   variables:
     label: null
@@ -11,11 +11,6 @@ status_chips:
       ]]]
 
   styles:
-    card:
-      - background: none
-      - padding: 0px
-      - cursor: "default"
-      - "--mdc-ripple-press-opacity": 0 # prevent click animation
     grid:
       - grid-template-areas: >
           [[[
